<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/companyDetailsLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.miracosta.fortune500.CompanyDetailsActivity"
    android:orientation="vertical"
    android:background="@color/aqua">

    <ImageView
        android:id="@+id/companyDetailsImageView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:layout_weight="2"
        android:adjustViewBounds="true"
        android:contentDescription="@string/game"
        android:scaleType="fitCenter"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/companyDetailsNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_weight="0"
        android:text="@string/company_placeholder"
        android:textSize="30sp" />

    <RatingBar
        android:id="@+id/companyDetailsRankRatingBar"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:isIndicator="true"
        android:numStars="@integer/max_num_stars"
        android:rating="0"
        android:stepSize="1" />

    <TextView
        android:id="@+id/companyDetailsEmployeesTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/employees_placeholder"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/companyDetailsProfitsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/profit_placeholder"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/companyDetailsMarketValueTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/market_value_placeholder"
        android:textSize="18sp" />

</LinearLayout>
